# blog

./: .gitignore  README.md  _quarto.yml  about.qmd  index.qmd  pyproject.toml
.quarto/idx/: about.qmd.json  index.qmd.json
.quarto/idx/posts/jupyter-post/: augmentation_example.ipynb.json
.quarto/xref/: INDEX  e729bdd9
_site/: about.html  search.json
_site/posts/jupyter-post/: augmentation_example.html  index.html
_site/posts/welcome/: index.html
docs/: index.html  index.xml  listings.json  robots.txt  search.json  sitemap.xml
docs/posts/augmentation_is_regularization/: aug.html  augmentation_is_regularization.html
docs/posts/augmentation_is_regularization copy/: augmentation_is_regularization.html
docs/posts/bilinear_muon/: bilinear_muon.html
docs/posts/jupyter-post/: augmentation_example.html
docs/posts/loocv/: loocv.html  loocv_part1.html
docs/posts/loocv_part2/: loocv_part2 copy.html  loocv_part2.html
docs/posts/music/: music.html
docs/posts/omp/: omp.html  wip.html
docs/posts/pearson_correlation/: pearson_correlation.html
docs/posts/rust_with_via/: rust_with_via.html
posts/augmentation_is_regularization/: augmentation_is_regularization.ipynb
posts/bilinear_muon/: bilinear_muon.md
posts/loocv/: loocv.ipynb  loocv_part1.ipynb
posts/loocv_part2/: loocv_part2.ipynb
posts/music/: music.md
posts/omp/: graveyard.md  omp.ipynb  wip.md
posts/pearson_correlation/: pearson_correlation.ipynb
posts/rust_with_via/: rust_with_via.md
