[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.1"
scipy = "^1.12.0"
plotly = "^5.20.0"
jax = "^0.4.25"
optuna = "^3.6.0"
tqdm = "^4.66.2"
scikit-learn = "^1.4.1.post1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
